# ripple

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_certs.sh  run.sh
backend/: broadcasts.h  db_helpers.h  main.cpp  models.h  presence.h  pulse_handler.h  routes.h  utils.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.jsx  main.jsx  mediaAccess.js  normalize.js  pulse_media.js  styles.css  theme.jsx
frontend/src/components/: CallOverlay.jsx  ChatApp.jsx  Composer.jsx  EmojiPicker.jsx  Lightbox.jsx  Login.jsx  MessagePane.jsx  Sidebar.jsx
